--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ code/Lhy 2022ML HW/HW2 Classification/libriphone/feat/.DS_Store
 code/Lhy 2022ML HW/HW2 Classification/libriphone/test_split.txt
 code/Lhy 2022ML HW/HW2 Classification/libriphone/train_labels.txt
 code/Lhy 2022ML HW/HW2 Classification/libriphone/train_split.txt
+
+code/Lhy 2022ML HW/HW3 CNN/food11
+Courses/2023 LhyML/LeeDL_Tutorial_v.1.1.9.pdf
