--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ code/Lhy 2022ML HW/HW2 Classification/libriphone/train_split.txt
 
 code/Lhy 2022ML HW/HW3 CNN/food11
 Courses/2023 LhyML/LeeDL_Tutorial_v.1.1.9.pdf
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct.zip
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct/model-00001-of-00004.safetensors
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct/model-00002-of-00004.safetensors
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct/model-00003-of-00004.safetensors
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct/model-00004-of-00004.safetensors
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct/original/tokenizer.model
+Courses/2024 智能应用开发/Meta-Llama-3.1-8B-Instruct/README.md
